tests/snapshot/error/source_locations/destructure/array/iterator_close_non_empty.exp
Error: 
  ┌ source_locations/destructure/array/iterator_close_non_empty.js:8:15
  |
8 |         throw new Error();
  |               ^
Stack trace:
  at get return (source_locations/destructure/array/iterator_close_non_empty.js:8:15)
  at <global> (source_locations/destructure/array/iterator_close_non_empty.js:14:5)